# esperance_de_vie_FR

./: .gitignore  DOCUMENTATION.md  README.md  app.py  common.py  pyproject.toml
.claude/: launch.json
data/: embedded.py  european.py  loader.py
pages/: 01_vue_generale.py  02_distribution_variance.py  03_cohorte_explorer.py  04_age_fixe_generations.py
