[project]
name = "esperance-vie-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.5.1",
    "pandas>=3.0.3",
    "plotly>=6.9.0",
    "requests>=2.34.2",
    "streamlit>=1.59.1",
]

[dependency-groups]
dev = [
    "ruff>=0.15.21",
]
